--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: Haolan Zhan's Portfolio
+description: A compilation of relavent projects and work experience in Electrical and Computer Engineering, and Computer Science
